@@ -3066,7 +3066,7 @@ fi
 
 # Define the identity of the package.
  PACKAGE=logger
- VERSION=0.0.0-4
+ VERSION=0.0.0-5
 
 
 cat >>confdefs.h <<_ACEOF
