@@ -1,3 +1,11 @@
+* v0.0.0-4 (22 nov 2011 - 09 dec 2011) SLOC 955 FT 9:31
+- LoggerOutputYaml escape string values with double quote
+- example yaml can be read with log_reader if some chars escaped
+- LoggerOutputYaml write logfile-version
+- log_reader checks if passed file exists
+- log_reader now reads argument file
+- All clases move to Rpg namespace
+
 * v0.0.0-3 (16 jul 2011 - 22 nov 2011) SLOC 916 FT 7:37
 - Doxygen documentation updated
 - Moved some Logger.hpp functions to implementation
