@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(logger.cc)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(logger, 0.0.0-4)
+AM_INIT_AUTOMAKE(logger, 0.0.0-5)
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AM_CONFIG_HEADER(config.h)
